@@ -13,18 +13,14 @@
 # "make doxygen" to document everything with DoxyGen (if installed) and
 # "make clean_doxygen" to remove generated Doxygen documentation from everything.
 
-# It is suggested that for the master build, the --quiet switch is passed to make,
-# to remove all the commands from the output. This gives a much easier to read
-# report of the entire build process.
-
 all:
 
 %:
 	@echo Executing \"make $@\" on all LUFA library elements.
 	@echo
-	make -C LUFA/ $@
-	make -C Demos/ $@
-	make -C Projects/ $@
-	make -C Bootloaders/ $@
+	make -C LUFA/ $@ -s
+	make -C Demos/ $@ -s
+	make -C Projects/ $@ -s
+	make -C Bootloaders/ $@ -s
 	@echo
 	@echo LUFA \"make $@\" operation complete.
